Remove animation on new console, causes layout issues

--- a/source/Web/Css/style.css
+++ b/source/Web/Css/style.css
@@ -80,21 +80,9 @@ h1 {
   border: 1px solid gray;
 
   display: flex;
-  flex: 0.0001;
+  flex: 1;
   flex-direction: column;
   overflow: hidden;
-
-  animation-name: grow;
-  animation-fill-mode: forwards;
-  animation-iteration-count: 1;
-  animation-timing-function: ease-in;
-  animation-duration: .5s;
-}
-
-@keyframes grow {
-  to {
-    flex: 1;
-  }
 }
 
 #terminals section header {
